Before changes for without honeypot

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,9 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens: [('VAR', 'Responder'), ('AND', '&'), ('LPAREN', '('), ('VAR', 'impacket'), ('OR', '|'), ('VAR', 'Metasploit'), ('RPAREN', ')')]\n",
+      "AST: Responder&impacket|Metasploit\n",
+      "&\n",
+      "Responder\n",
+      "|\n",
+      "impacket\n",
+      "Metasploit\n",
+      "Compiled Expression: (Responder & (impacket | Metasploit))\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import re\n",
@@ -36,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +236,27 @@
    ],
    "source": [
     "to_dot(BAG_ref, nodes, [], path, \"reference\", display_kts=False, calculate_probabilities=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BayesianNetwork with 39 nodes and 77 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rmv_node(BAG, '26')\n",
+    "# nodes.pop('26')\n",
+    "evidences = [[9, 7, 19, 23, 22, 24]]\n",
+    "for evidence in evidences:\n",
+    "    to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=True)"
    ]
   },
   {
