tracé d'un certain nombre de chose dont le graph avec kts complet à la main. Aussi la comparaison en tableau entre ma methode et baseline

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -30,12 +30,11 @@
    "source": [
     "import csv\n",
     "import re\n",
-    "import numpy as np\n",
     "from pathlib import Path\n",
-    "from BAG_Code_tw520.BayesianAttackGraph import parse_dot\n",
+    "from BAG_Code_tw520.BayesianAttackGraph import parse_dot, rmv_node, evidences_to_string\n",
     "from BAG_Code_tw520.createANDtable import create_AND_table\n",
     "from BAG_Code_tw520.createORtable import create_OR_table\n",
-    "from BAG_Code_tw520.Tools_tree import tokenizer, Parser, build_tools_tree\n",
+    "from BAG_Code_tw520.Tools_tree import kts_layer_original\n",
     "import BAG_Code_tw520.Loopy as Loopy\n",
     "\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation\n",
@@ -145,55 +144,7 @@
     "    dot += '}' # End of the dot file\n",
     "    # Write the dot file\n",
     "    with open(path / (basename + evidences_to_string(evidences) + \".dot\"), 'w') as f:\n",
-    "        f.write(dot)\n",
-    "\n",
-    "def kts_layer(BAG, ONE, nodes):\n",
-    "    with open('./Threat_Inteligence/kts_base_score.csv', mode='r') as kts_basescore_file:\n",
-    "        reader = csv.DictReader(kts_basescore_file)\n",
-    "        kts_base_score = {}\n",
-    "        for row in reader:\n",
-    "            kts_base_score[row['kts']] = float(row['base_score'])\n",
-    "    # The skills layer:\n",
-    "    cpd_Lskills = TabularCPD('Lskills', 2, [[1-kts_base_score['L']], [kts_base_score['L']]])\n",
-    "    cpd_Hskills = TabularCPD('Hskills', 2, [[1-kts_base_score['H']], [kts_base_score['H']]])\n",
-    "    \n",
-    "    # The knowledge layer:\n",
-    "    cpd_knowledge = [TabularCPD(knowledge, 2, [[0.3], [0.7]]) for knowledge in ['Known vulnerabilities', 'CQCM', 'No credentials', 'MITM', 'Permissions move', 'Privilege escalation', 'Lateral move', 'ADCS']]\n",
-    "\n",
-    "    # Import all the dependencies\n",
-    "    cpt_l4 = create_AND_table([ONE, ONE, ONE, ONE])\n",
-    "    with open('./Threat_Inteligence/CVE_knowledge_tooling_skills.csv', mode='r') as ktsfile:\n",
-    "        reader = csv.DictReader(ktsfile)\n",
-    "        kts_dict = {}\n",
-    "        for row in reader:\n",
-    "            cve = row['Vulnerability']\n",
-    "            tmp = {'tool': row['tool'], 'skills': row['skills'], 'Type': row['Type']}\n",
-    "            kts_dict[cve] = tmp\n",
-    "    for node in nodes.items():\n",
-    "            id = node[0]\n",
-    "            node = node[1]\n",
-    "            if node['CVE'] != \"null\":\n",
-    "                row = kts_dict[node['CVE']]\n",
-    "                build_tools_tree(BAG, Parser(tokenizer(row['tool'])).parse(), id, ONE, kts_base_score)\n",
-    "                BAG.add_edge(row['skills'] + 'skills', id)\n",
-    "                build_tools_tree(BAG, Parser(tokenizer(row['Type'])).parse(), id, ONE, kts_base_score)\n",
-    "                parents = BAG.get_parents(id)\n",
-    "                BAG.remove_cpds(id)\n",
-    "                BAG.add_cpds(TabularCPD(id, 2, cpt_l4.T, parents, evidence_card=2*np.ones(len(parents))))\n",
-    "    # We add all the necessary CPDs to the BAG\n",
-    "    for cpd in [cpd_Lskills, cpd_Hskills] + cpd_knowledge:\n",
-    "        if BAG.__contains__(cpd.variable):\n",
-    "            BAG.add_cpds(cpd)\n",
-    "\n",
-    "def rmv_node(BAG, node):\n",
-    "    edge = [(u,node) for u in BAG.get_parents(node)]\n",
-    "    BAG.remove_edges_from(edge)\n",
-    "    BAG.add_cpds(TabularCPD(node, 2, create_AND_table([0]).T))\n",
-    "\n",
-    "def evidences_to_string(evidences):\n",
-    "    return ''.join([f'_{k}' for k, v in evidences.items()])\n",
-    "\n",
-    "    "
+    "        f.write(dot)"
    ]
   },
   {
@@ -218,12 +169,12 @@
     "\n",
     "# We create a dictionary to get the node number from the label\n",
     "inverted_nodes = {int(v['label'].split(':')[0]): k for k, v in nodes.items()}\n",
-    "kts_layer(BAG, ONE, nodes)"
+    "kts_layer_original(BAG, ONE, nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -240,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 39 nodes and 77 edges\n"
+      "BayesianNetwork with 39 nodes and 81 edges\n"
      ]
     }
    ],
@@ -261,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,12 +225,12 @@
    ],
    "source": [
     "evidence = []\n",
-    "to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=True)"
+    "to_dot(BAG, nodes, evidence, path, basename, display_kts=True, calculate_probabilities=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
