--- a/bag_playbook_rmv_honey.ipynb
+++ b/bag_playbook_rmv_honey.ipynb
@@ -17,10 +17,10 @@
     "import re\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from BAG_Code_tw520.BayesianAttackGraph import parse_dot\n",
+    "from BAG_Code_tw520.BayesianAttackGraph import parse_dot, rmv_node, evidences_to_string\n",
     "from BAG_Code_tw520.createANDtable import create_AND_table\n",
     "from BAG_Code_tw520.createORtable import create_OR_table\n",
-    "from BAG_Code_tw520.Tools_tree import tokenizer, Parser\n",
+    "from BAG_Code_tw520.Tools_tree import tokenizer, Parser, kts_layer_static\n",
     "import BAG_Code_tw520.Loopy as Loopy\n",
     "\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation\n",
@@ -53,16 +53,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_tools_tree(BAG, ast, id, ONE, kts_base_score):\n",
+    "def build_tools_tree_static(BAG, ast, id, ONE, kts_base_score):\n",
     "    if ast.type == 'AND':\n",
     "        prob = 1\n",
     "        for child in ast.children:\n",
-    "            prob = prob * build_tools_tree(BAG, child, ast.__repr__(), ONE, kts_base_score)\n",
+    "            prob = prob * build_tools_tree_static(BAG, child, ast.__repr__(), ONE, kts_base_score)\n",
     "        return prob\n",
     "    elif ast.type == 'OR':\n",
     "        prod = 1        \n",
     "        for child in ast.children:\n",
-    "            prod = prod * (1 - build_tools_tree(BAG, child, ast.__repr__(), ONE, kts_base_score))\n",
+    "            prod = prod * (1 - build_tools_tree_static(BAG, child, ast.__repr__(), ONE, kts_base_score))\n",
     "        return 1 - prod\n",
     "    else:\n",
     "        return kts_base_score[ast.__repr__()]"
@@ -151,59 +151,7 @@
     "    dot += '}' # End of the dot file\n",
     "    # Write the dot file\n",
     "    with open(path / (basename + evidences_to_string(evidences) + \".dot\"), 'w') as f:\n",
-    "        f.write(dot)\n",
-    "\n",
-    "def kts_layer(BAG, ONE, nodes):\n",
-    "    with open('./Threat_Inteligence/kts_base_score.csv', mode='r') as kts_basescore_file:\n",
-    "        reader = csv.DictReader(kts_basescore_file)\n",
-    "        kts_base_score = {}\n",
-    "        for row in reader:\n",
-    "            kts_base_score[row['kts']] = float(row['base_score'])\n",
-    "    # The skills layer:\n",
-    "    cpd_Lskills = TabularCPD('Lskills', 2, [[1-kts_base_score['L']], [kts_base_score['L']]])\n",
-    "    cpd_Hskills = TabularCPD('Hskills', 2, [[1-kts_base_score['H']], [kts_base_score['H']]])\n",
-    "    \n",
-    "    # The knowledge layer:\n",
-    "    cpd_knowledge = [TabularCPD(knowledge, 2, [[0.3], [0.7]]) for knowledge in ['Known vulnerabilities', 'CQCM', 'No credentials', 'MITM', 'Permissions move', 'Privilege escalation', 'Lateral move', 'ADCS']]\n",
-    "\n",
-    "    # Import all the dependencies\n",
-    "    cpt_l4 = create_AND_table([ONE, ONE, ONE, ONE])\n",
-    "    with open('./Threat_Inteligence/CVE_knowledge_tooling_skills.csv', mode='r') as ktsfile:\n",
-    "        reader = csv.DictReader(ktsfile)\n",
-    "        kts_dict = {}\n",
-    "        for row in reader:\n",
-    "            cve = row['Vulnerability']\n",
-    "            tmp = {'tool': row['tool'], 'skills': row['skills'], 'Type': row['Type']}\n",
-    "            kts_dict[cve] = tmp\n",
-    "    for node in nodes.items():\n",
-    "            id = node[0]\n",
-    "            node = node[1]\n",
-    "            if node['CVE'] != \"null\":\n",
-    "                row = kts_dict[node['CVE']]\n",
-    "                tool_score = build_tools_tree(BAG, Parser(tokenizer(row['tool'])).parse(), id, ONE, kts_base_score)\n",
-    "                skills_score = kts_base_score[row['skills']]\n",
-    "                k_score = build_tools_tree(BAG, Parser(tokenizer(row['Type'])).parse(), id, ONE, kts_base_score)\n",
-    "                # prob = kts_base_score[row['Type']] * kts_base_score[row['skills']] * kts_base_score[row['tool']]\n",
-    "                prob = tool_score * skills_score * k_score\n",
-    "                prob = prob + 0.01 - prob*0.01\n",
-    "                cpt_l4 = [[1, 1-prob], [0, prob]]\n",
-    "                parents = BAG.get_parents(id)\n",
-    "                BAG.remove_cpds(id)\n",
-    "                BAG.add_cpds(TabularCPD(id, 2, cpt_l4, parents, evidence_card=2*np.ones(len(parents))))\n",
-    "    # We add all the necessary CPDs to the BAG\n",
-    "    for cpd in [cpd_Lskills, cpd_Hskills] + cpd_knowledge:\n",
-    "        if BAG.__contains__(cpd.variable):\n",
-    "            BAG.add_cpds(cpd)\n",
-    "\n",
-    "def rmv_node(BAG, node):\n",
-    "    edge = [(u,node) for u in BAG.get_parents(node)]\n",
-    "    BAG.remove_edges_from(edge)\n",
-    "    BAG.add_cpds(TabularCPD(node, 2, create_AND_table([0]).T))\n",
-    "\n",
-    "def evidences_to_string(evidences):\n",
-    "    return ''.join([f'_{k}' for k, v in evidences.items()])\n",
-    "\n",
-    "    "
+    "        f.write(dot)"
    ]
   },
   {
@@ -224,11 +172,9 @@
     "\n",
     "# This is the reference BAG, before the attacker has compromised any node\n",
     "BAG_ref = BAG.copy()\n",
-    "prop0 = BeliefPropagation(BAG_ref)\n",
     "\n",
     "# We create a dictionary to get the node number from the label\n",
-    "inverted_nodes = {int(v['label'].split(':')[0]): k for k, v in nodes.items()}\n",
-    "kts_layer(BAG, ONE, nodes)"
+    "kts_layer_static(BAG, ONE, nodes)"
    ]
   },
   {
