--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -16,11 +16,11 @@
     "import csv\n",
     "import re\n",
     "from pathlib import Path\n",
-    "from BAG_Code_tw520.BayesianAttackGraph import parse_dot, rmv_node, evidences_to_string\n",
-    "from BAG_Code_tw520.createANDtable import create_AND_table\n",
-    "from BAG_Code_tw520.createORtable import create_OR_table\n",
-    "from BAG_Code_tw520.Tools_tree import kts_layer_original\n",
-    "import BAG_Code_tw520.Loopy as Loopy\n",
+    "from BAG_Code.BayesianAttackGraph import parse_dot, rmv_node, evidences_to_string\n",
+    "from BAG_Code.createANDtable import create_AND_table\n",
+    "from BAG_Code.createORtable import create_OR_table\n",
+    "from BAG_Code.Tools_tree import kts_layer_original\n",
+    "import BAG_Code.Loopy as Loopy\n",
     "\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation\n",
     "from pgmpy.factors.discrete import TabularCPD"
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Name of the simulation\n",
-    "simulation = \"Big\"\n",
+    "simulation = \"HighLevel\"\n",
     "\n",
     "# Constante for probability one\n",
     "ONE = 0.999"
