amelioration of the gitignore file

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## This Playbook is designed to calculate a bayesia inference on an attack graph \n",
     "Import the librairies and modules:"
    ]
   },
@@ -20,15 +21,14 @@
     "from BAG_Code.Tools_tree import kts_layer_original, kts_layer_static\n",
     "import BAG_Code.Loopy as Loopy\n",
     "\n",
-    "from pgmpy.inference.ExactInference import BeliefPropagation\n",
-    "from pgmpy.factors.discrete import TabularCPD"
+    "from pgmpy.inference.ExactInference import BeliefPropagation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To prepare the simulation use the following to put the graph in memory:"
+    "To prepare the simulation we use the following parameters:"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "# Name of the simulation\n",
     "simulation = \"HighLevel\"\n",
-    "# simulation = \"HighLevel_no_HP\"\n",
+    "# simulation = \"HighLevel_no_HP\" # For static version without honeypots\n",
     "\n",
     "# Constante for probability one\n",
     "ONE = 0.999\n",
@@ -49,7 +49,14 @@
     "file_name = \"ag-nocycles.dot\"\n",
     "path_to_dot = path / file_name\n",
     "basename = \"classic\"\n",
-    "# basename = \"no_honey\""
+    "# basename = \"no_honey\" # For static version without honeypots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function is used to draw the graph"
    ]
   },
   {
@@ -58,7 +65,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_dot(BAG, nodes, evidences, path, basename, display_kts=False, calculate_probabilities=False):\n",
+    "def to_dot(BAG, nodes, evidences, path, basename, display_kts=False, calculate_probabilities=1):\n",
+    "    \"\"\"\n",
+    "    Converts a Bayesian Network (BAG) to a DOT file format for visualization after calculating the Bayesian inference on it.\n",
+    "\n",
+    "    Args:\n",
+    "        BAG (networkx.DiGraph): The Bayesian Network.\n",
+    "        nodes (dict): A dictionary containing information about the nodes in the network.\n",
+    "        evidences (list): A list of evidence nodes.\n",
+    "        path (str): The path where the DOT file will be saved.\n",
+    "        basename (str): The base name of the DOT file.\n",
+    "        display_kts (bool, optional): Whether to display the nodes corresponding to the capabilities of the threat actor. Defaults to False.\n",
+    "        calculate_probabilities (bool, optional): Whether to calculate probabilities or not and if yes, using 1 - exact inference or 2 - loopy propagation. Defaults to 1.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    nodes_BAG = BAG.nodes()\n",
     "    evidences = {str(k): 1 for k in evidences}\n",
     "    dot = 'digraph G {\\nranksep=0.2;\\n'\n",
@@ -137,6 +159,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next step is designed to read the graph from the dot file and add the "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -151,7 +180,7 @@
     "\n",
     "# We create a dictionary to get the node number from the label\n",
     "kts_layer_original(BAG, ONE, nodes)\n",
-    "kts_layer_static(BAG, ONE, nodes)"
+    "# kts_layer_static(BAG, ONE, nodes) # Static version without honeypots"
    ]
   },
   {
@@ -181,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In the case no honeypots\n",
+    "# In the case without honeypots\n",
     "evidences = [[], [9], [9, 7], [9, 7, 5], [9, 13, 5]]\n",
     "for evidence in evidences:\n",
     "    to_dot(BAG, nodes, evidence, path, basename, display_kts=False, calculate_probabilities=1)"
