--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following function is used to draw the graph"
+    "The following function is used to draw the graph:"
    ]
   },
   {
